userapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user-api
  name: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user-api
    spec:
      containers:
      - image: shoebhashem/userapi:v1
        name: userapi
        resources: {}
status: {}
