deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongodb"
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        - name: mongo-config
          mountPath: /data/configdb
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests: 
            storage: 10Mi
    - metadata:
        name: mongo-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests: 
            storage: 5Mi 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      - name: userapi
        image: shoebhashem/userapi:v1
        ports:
        - containerPort: 5005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movieapi
  template:
    metadata:
      labels:
        app: movieapi
    spec:
      containers:
      - name: movieapi
        image: shoebhashem/movieapi:v1
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: userapi
spec:
  selector:
    app: userapi
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
  type: LoadBalancer
