movieapi-deploy.yaml
# Userapi
# --------------------
# - Deployment to launch one container of shoebhashem/userapi:v4 in a pod.
# - Service (type: LoadBalancer) to open up the app to the world (localhost, at least).
# 
---
#apiVersion: v1
#kind: Secret
#metadata:
#  name: session-secret
#type: Opaque
#data:
#  SESSION_SECRET: cmFuZG9tLXNlY3JldC1rZXk= 
---
apiVersion: v1
kind: Service
metadata:
  name: movieapi-service
  labels:
    app: movieapi
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5004
    targetPort: 5004
    #NodePort: 30001
    protocol: TCP
  selector:
    app: movieapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieapi
  labels:
    app: movieapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieapi
  template:
    metadata:
      labels:
        app: movieapi
    spec:
      containers:
      - name: movieapi
        image: shoebhashem/movieapi:v4
        ports:
        - containerPort: 5004
---
# MovieStore
# --------------------
# - one container per pod running the image mongodb
# - one headless service to access them.
# - Two persistentVolumeClaims/mounts: textstore-data, and mongo-config
---
apiVersion: v1
kind: Service
metadata:
  name: moviestore-service
  labels:
    app: moviestore
spec:
  ports:
  - port: 27017
    targetPort: mongodb-port
  selector:
    app: moviestore
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: moviestore
  labels:
    app: moviestore
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: moviestore
  template:
    metadata:
      labels:
        app: moviestore
    spec:
      containers:
      - name: moviestore
        image: mongo
        ports:
        - containerPort: 27017
          name: mongodb-port
        volumeMounts:
        - name: moviestore-data
          mountPath: /data/db
        - name: mongo-config
          mountPath: /data/configdb
  volumeClaimTemplates:
    - metadata:
        name: moviestore-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Mi
    - metadata:
        name: mongo-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Mi
---
# ConfigMap to store MOVIESTORE_HOST variable in
# --------------------
---
