basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userapi-service
                port:
                  number: 8080
          - path: /movieapi/movies
            pathType: Prefix
            backend:
              service:
                name: movieapi-service
                port:
                  number: 8080
