ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: movie.userapi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: userapi-service
            port:
              number: 80
  - host: user.movieapi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: movieapi-service
            port:
              number: 80
